added gitignore from main

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 fjordvision/*
 runs/*
 *.pt
-segmented-objects
+segmented-objects/*
 *.parquet
 *.pth
 activations/*
 class-activations/*
+coco-segmented-objects/*
+*.pyc
+models/weights/*
