Added dataset for maskrccn to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ datasets/pre-trained-models
 datasets/rtdetr-segmented-objects
 datasets/yolov9-segmented-objects
 datasets/yolov8-segmented-objects
+datasets/maskrcnn-segmented-objects
