--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,52 @@
-annotated-types==0.6.0
+annotated-types==0.7.0
 anytree==2.12.1
 asttokens==2.4.1
 blis==0.7.11
 catalogue==2.0.10
-certifi==2023.11.17
+certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
-cloudpathlib==0.16.0
-comm==0.2.1
-confection==0.1.4
-contourpy==1.2.0
-cramjam==2.8.1
+cloudpathlib==0.18.1
+comm==0.2.2
+confection==0.1.5
+contourpy==1.2.1
+cramjam==2.8.3
 cycler==0.12.1
 cymem==2.0.8
-debugpy==1.8.0
+debugpy==1.8.2
 decorator==5.1.1
-exceptiongroup==1.2.0
+exceptiongroup==1.2.1
 executing==2.0.1
-fastcore==1.5.29
+fastcore==1.5.51
 fastdownload==0.0.7
-fastparquet==2023.10.1
+fastparquet==2024.5.0
 fastprogress==1.0.3
-filelock==3.13.1
-fonttools==4.47.2
-fsspec==2023.12.2
+filelock==3.15.4
+fonttools==4.53.1
+fsspec==2024.6.1
 git-filter-repo==2.38.0
-idna==3.6
-ipykernel==6.29.0
-ipython==8.21.0
+idna==3.7
+ipykernel==6.29.5
+ipython==8.26.0
 jedi==0.19.1
-Jinja2==3.1.3
-joblib==1.3.2
-jupyter_client==8.6.0
-jupyter_core==5.7.1
+Jinja2==3.1.4
+joblib==1.4.2
+jupyter_client==8.6.2
+jupyter_core==5.7.2
 kiwisolver==1.4.5
-langcodes==3.3.0
-MarkupSafe==2.1.4
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
+langcodes==3.4.0
+language_data==1.2.0
+marisa-trie==1.2.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.1
+matplotlib-inline==0.1.7
+mdurl==0.1.2
 mpmath==1.3.0
 murmurhash==1.0.10
 nest-asyncio==1.6.0
-networkx==3.2.1
-numpy==1.26.3
+networkx==3.3
+numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
@@ -52,60 +56,65 @@ nvidia-cufft-cu12==11.0.2.54
 nvidia-curand-cu12==10.3.2.106
 nvidia-cusolver-cu12==11.4.5.107
 nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.3.101
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.5.82
 nvidia-nvtx-cu12==12.1.105
-opencv-python==4.9.0.80
-packaging==23.2
-pandas==2.2.0
-parso==0.8.3
-path==16.9.0
+opencv-python==4.10.0.84
+packaging==24.1
+pandas==2.2.2
+parso==0.8.4
+path==16.14.0
 pexpect==4.9.0
-pillow==10.2.0
-platformdirs==4.2.0
+pillow==10.4.0
+pip-review==1.3.0
+platformdirs==4.2.2
 preshed==3.0.9
-prompt-toolkit==3.0.43
-protobuf==4.25.2
-psutil==5.9.8
+prompt_toolkit==3.0.47
+protobuf==5.27.2
+psutil==6.0.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py-cpuinfo==9.0.0
-pyarrow==15.0.0
-pycocotools==2.0.7
-pydantic==2.6.3
-pydantic_core==2.16.3
-Pygments==2.17.2
-pyparsing==3.1.1
-python-dateutil==2.8.2
-pytz==2023.4
+pyarrow==16.1.0
+pycocotools==2.0.8
+pydantic==2.8.2
+pydantic_core==2.20.1
+Pygments==2.18.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
 PyYAML==6.0.1
-pyzmq==25.1.2
-requests==2.31.0
-scikit-learn==1.4.0
-scipy==1.12.0
+pyzmq==26.0.3
+requests==2.32.3
+rich==13.7.1
+scikit-learn==1.5.1
+scipy==1.14.0
 seaborn==0.13.2
+shellingham==1.5.4
 six==1.16.0
-smart-open==6.4.0
-spacy==3.7.4
+smart-open==7.0.4
+spacy==3.7.5
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.4.8
 stack-data==0.6.3
-sympy==1.12
-thinc==8.2.3
+sympy==1.13.0
+thinc==8.2.2
 thop==0.1.1.post2209072238
-threadpoolctl==3.2.0
-torch==2.2.0
-torchvision==0.17.0
-tornado==6.4
-tqdm==4.66.1
-traitlets==5.14.1
-triton==2.2.0
-typer==0.9.0
-typing_extensions==4.9.0
-tzdata==2023.4
-ultralytics==8.1.8
-urllib3==2.2.0
-wasabi==1.1.2
+threadpoolctl==3.5.0
+torch==2.3.1
+torchvision==0.18.1
+tornado==6.4.1
+tqdm==4.66.4
+traitlets==5.14.3
+triton==2.3.1
+typer==0.12.3
+typing_extensions==4.12.2
+tzdata==2024.1
+ultralytics==8.2.52
+ultralytics-thop==2.0.0
+urllib3==2.2.2
+wasabi==1.1.3
 wcwidth==0.2.13
-weasel==0.3.4
+weasel==0.4.1
+wrapt==1.16.0
