ignore new models datasets from git.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ datasets/rtdetr-segmented-objects
 datasets/yolov9-segmented-objects
 datasets/yolov8-segmented-objects
 datasets/maskrcnn-segmented-objects
+datasets/yolosag-segmented-objects
+datasets/yolov11-segmented-objects
+
+# Results
+results
